--- a/src/views/embed.ejs
+++ b/src/views/embed.ejs
@@ -60,8 +60,8 @@
           <div class="container small dark">
             <div class="padding-top padding-bottom padding-left padding-right">
               <div class="settings-disclaimer embed">
-                <div>This is the text channel the embed message will be posted in.</div>
-                <br />
+                <div class="ms-title">Text Channel</div>
+                <div class="ms-description">This is the text channel the embed message will be posted in.</div>
                 <div class="form-group embed">
                   <select id="tc" name="tc" onchange="changeTcSel(this);" required>
                     <option value="" selected disabled>Please select a text channel</option>
@@ -71,7 +71,7 @@
                     <%   } %>
                     <% }); %>
                   </select>
-                  <label for="tc" class="control-label">Text Channel</label><i class="bar"></i>
+                  <i class="bar"></i>
                 </div>
               </div>
             </div>
