--- a/src/views/join.ejs
+++ b/src/views/join.ejs
@@ -87,16 +87,16 @@ const joinMsgReq = joinMessage ? 'required' : '';
                 <div class="padding-top padding-bottom padding-left padding-right">
                     <form action="/submit/join" method="POST" id="form-join">
                         <div class="settings-disclaimer">
-                            <div>A custom message for joining members.</div>
-                            <br />
+                            <div class="ms-title">Welcome Message</div>
+                            <div class="ms-description">A custom message for joining members.</div>
                             <div class="form-group">
                                 <textarea onkeyup="setRequired(this); handleJoinMsg(this);" id="join-msg" name="join-msg" maxlength="2048" <%= joinMsgReq %>><%= joinMessage %></textarea>
-                                <label for="join-msg" class="control-label">Welcome Message</label><i class="bar"></i>
+                                <i class="bar"></i>
                             </div>
                         </div>
                         <div class="settings-disclaimer">
-                            <div>This is the text channel the welcome messages will be posted in.</div>
-                            <br />
+                            <div class="ms-title">Welcome Announcement</div>
+                            <div class="ms-description">This is the text channel the welcome messages will be posted in.</div>
                             <div class="form-group">
                                 <% let defaultSelected = tcId === '0' ? 'selected' : ''; %>
                                 <select id="tc" name="tc" onchange="changeTcSel(this); submitJoin();">
@@ -108,7 +108,7 @@ const joinMsgReq = joinMessage ? 'required' : '';
                                     <%     } %>
                                     <% }); %>
                                 </select>
-                                <label for="tc" class="control-label">Text Channel</label><i class="bar"></i>
+                                <i class="bar"></i>
                             </div>
                         </div>
                         <!-- to include it in url params -->
